Fixes #15568: Display warning when plugin license is near expiration date

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
@@ -299,9 +299,10 @@
               </div>
             </div>
           </div>
-
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav" id="rudder-navbar">
+              <!-- Plugin license warning -->
+             <div data-lift="PluginExpirationInfo.render"></div>
               <!-- Promise Generation -->
               <li class="lift:comet?type=AsyncDeployment" name="deploymentStatus"></li>
               <li class="tasks-menu">
