Fixes #15587: Change introduction and description fields look in Rudder web interface

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/apiManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/apiManagement.html
@@ -42,7 +42,10 @@
     <div class="inner-portlet">
       <div class="page-title">Configure allowed accounts</div>
       <div class="portlet-content">
-        <div class="intro">
+        <div class="callout-fade callout-info">
+          <div class="marker">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </div>
           <div>
             <p>
               Configure accounts allowed to connect to Rudder's REST API.
