--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/databaseManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/databaseManagement.html
@@ -26,7 +26,10 @@
         <div class="inner-portlet">
           <div class="page-title">Active reports
           </div>
-          <div class="intro">
+          <div class="callout-fade callout-info">
+            <div class="marker">
+              <span class="glyphicon glyphicon-info-sign"></span>
+            </div>
             <div>
               Active reports are stored in an SQL table with full indexing.
               Storing large quantities may consume considerable disk space,
@@ -63,7 +66,10 @@
 
         <div class="inner-portlet">
           <div class="page-title">Archived reports</div>
-            <div class="intro">
+            <div class="callout-fade callout-info">
+              <div class="marker">
+                <span class="glyphicon glyphicon-info-sign"></span>
+              </div>
               <div>
                 Archived reports are stored in an SQL table without any indexes,
                 thus providing a substantial saving on disk space required to
@@ -99,7 +105,10 @@
     <div class="inner-portlet">
           <div class="page-title">Automatic report cleaning</div>
           <div class="inner-portlet-content">
-            <div class="intro">
+            <div class="callout-fade callout-info">
+              <div class="marker">
+                <span class="glyphicon glyphicon-info-sign"></span>
+              </div>
               <div>
                 Regular archiving and deleting of reports can be set in the
                 Rudder configuration file (/opt/rudder/etc/rudder-web.properties).
@@ -140,7 +149,10 @@
         <div class="inner-portlet">
           <div class="page-title">Manual report cleaning</div>
           <div class="inner-portlet-content">
-            <div class="intro">
+            <div class="callout-fade callout-info">
+              <div class="marker">
+                <span class="glyphicon glyphicon-info-sign"></span>
+              </div>
               <div>
                 You can trigger a reports database cleaning in this section. If a
                 archive or delete process is already in progress, you will have to wait
