--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/techniqueLibraryManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/techniqueLibraryManagement.html
@@ -10,7 +10,10 @@
   <div class="portlet-content">
     <div class="inner-portlet space-bottom">
       <div class="page-title">Technique library</div>
-      <div class="intro">
+      <div class="callout-fade callout-info">
+        <div class="marker">
+          <span class="glyphicon glyphicon-info-sign"></span>
+        </div>
         <lift:authz role="directive_read">
           Only Techniques in the User library are available to create <a href="/secure/configurationManager/directiveManagement">new Directives</a>. Add new Techniques by drag'n'dropping them from left to right.
           <br/>
