--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/parameterManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/parameterManagement.html
@@ -35,7 +35,10 @@
     <div class="inner-portlet">
       <lift:authz role="directive_read">
         <div class="page-title">Global Parameters</div>
-        <div class="intro">
+        <div class="callout-fade callout-info">
+          <div class="marker">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </div>
           <div>
             <p>Global Parameters are key/value pairs. Once defined, you can use the key in a directive parameter
               field and it will be replaced by the value for that key during policy generation.</p>
