--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
@@ -9,7 +9,7 @@
     <h3 class="page-title">Plugins</h3>
 
     <div class="portlet-content">
-      <div class="col-xs-12 callout-fade callout-warning">
+      <div class="col-xs-12 callout-fade callout-info">
         <div class="marker">
           <span class="glyphicon glyphicon-info-sign"></span>
         </div>
@@ -25,7 +25,7 @@
         <div class="inner-portlet">
           <h4 class="page-subtitle" data-plugin="name">[Here comes the plugins name]</h4>
 
-          <div class="col-xs-12 callout-fade callout-warning">
+          <div class="col-xs-12 callout-fade callout-info">
             <div class="marker">
               <span class="glyphicon glyphicon-info-sign"></span>
             </div>
