--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/archiveManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/archiveManagement.html
@@ -43,7 +43,10 @@
     <div class="inner-portlet">
       <div class="page-title">Global archive</div>
       <div class="portlet-content">
-        <div class="intro">
+        <div class="callout-fade callout-info">
+          <div class="marker">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </div>
           Archive or restore settings (Groups, Rules, Directives and active Techniques) from Rudder to backup, restore or transfer items between Rudder instances.
         </div>
         <div class="deca">
@@ -70,7 +73,10 @@
     <div class="inner-portlet">
       <div class="page-title">Archive groups</div>
       <div class="portlet-content">
-        <div class="intro">
+        <div class="callout-fade callout-info">
+          <div class="marker">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </div>
           <div>Archive or restore Groups only.</div>
         </div>
         <div class="deca">
@@ -97,7 +103,10 @@
     <div class="inner-portlet">
       <div class="page-title">Archive Rules</div>
       <div class="portlet-content">
-        <div class="intro">
+        <div class="callout-fade callout-info">
+          <div class="marker">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </div>
           <div>Archive or restore Rules only.</div>
         </div>
         <div class="deca">
@@ -124,7 +133,10 @@
     <div class="inner-portlet">
       <div class="page-title">Archive Directives and active Techniques</div>
       <div class="portlet-content">
-        <div class="intro">
+        <div class="callout-fade callout-info">
+          <div class="marker">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </div>
           <div>Archive or restore Directives and active Techniques only.</div>
         </div>
         <div class="deca">
