--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/manageNewNode.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/manageNewNode.html
@@ -7,7 +7,10 @@
 <div class="portlet">
 <div class="inner-portlet">
   <div class="page-title">Accept new Nodes</div>
-  <div class="intro">
+  <div class="callout-fade callout-info">
+    <div class="marker">
+      <span class="glyphicon glyphicon-info-sign"></span>
+    </div>
     Accept or refuse Nodes in your infrastructure that have declared themselves to Rudder by sending an inventory report. To add new nodes, install the rudder-agent package on a machine, and follow the instructions provided.
   </div>
 
@@ -19,7 +22,10 @@
       </ul>
 
       <div id="review_new_server">
-        <div class="tabInform">
+        <div class="callout-fade callout-info">
+          <div class="marker">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </div>
           <p>Click on a node name to view detailed inventory information.</p>
 
           <p>Click on <i class="glyphicon glyphicon-search"></i>to list Rules that would be applied to this node if you accept it.</p>
@@ -42,7 +48,10 @@
       </div>
 
       <div id="history"><div data-lift="lazy-load">
-        <div class="tabInform">
+        <div class="callout-fade callout-info">
+          <div class="marker">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </div>
           <p>View history of Nodes that have been accepted or refused.</p>
           <p>Click on a node name to view detailed inventory information (as it was at review time).</p>
         </div>
