--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/searchNodes.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/searchNodes.html
@@ -11,7 +11,10 @@
 <div class="portlet">
   <div class="portlet-header page-title">Nodes</div>
   <div class="portlet-content">
-    <div class="intro query-search-message">
+    <div class="callout-fade callout-info" >
+      <div class="marker">
+        <span class="glyphicon glyphicon-info-sign"></span>
+      </div>
       <div>
         Make a query base search and display node details
       </div>
@@ -30,7 +33,10 @@
             Query based search
         </div>
         <div id="query-search-content" style="display:none;">
-          <div class="intro">
+          <div class="callout-fade callout-info">
+            <div class="marker">
+              <span class="glyphicon glyphicon-info-sign"></span>
+            </div>
             <div>
               Find nodes in your Rudder infrastructure that match different criteria.<br />
               Define <a href="/secure/nodeManager/groups">node groups</a> from your search results.
