--- a/builder/index.html
+++ b/builder/index.html
@@ -55,7 +55,7 @@
             </div>
           </div>
         </script>
-        
+
         <script type="text/ng-template" id="SaveChangesModal.html">
           <div class="modal-header">
             <h3 class="modal-title">Unsaved changes</h3>
@@ -305,7 +305,7 @@
                                 </span>
                               </div>
                             </div>
-                            <div class="form-group col-sm-12 text-center no-padding-right"> 
+                            <div class="form-group col-sm-12 text-center no-padding-right">
                               <div ng-click="addParameter()" class="btn btn-success btn-outline" >
                                 Add parameter <i class="fas fa-plus-circle"></i>
                               </div>
@@ -476,7 +476,7 @@
                             <form name="CForm.form">
                                 <div class="form-group condition-form">
                                   <label class="control-label" for="advanced">Other conditions:</label>
-                                  <textarea msd-elastic name="cfClasses" class="form-control" rows="1" id="advanced" ng-pattern="/^\S+$/" ng-model="selectedMethod.advanced_class" ng-change="updateClassContext()"></textarea>
+                                  <textarea msd-elastic name="cfClasses" class="form-control" rows="1" id="advanced" ng-pattern="/^[a-zA-Z0-9!()._]+$/" ng-model="selectedMethod.advanced_class" ng-change="updateClassContext()"></textarea>
                                   <div ng-messages="CForm.form.cfClasses.$error" role="alert">
                                     <div ng-message="pattern" class="text-danger">This field cannot contain whitespace</div>
                                   </div>
