Fixes #15672: Add technique ID in UI

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/directiveManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/directiveManagement.html
@@ -158,7 +158,11 @@
               </div>
               <div ng-non-bindable id="isDisabled">[Disabled Technique]</div>
               <div>
-                <h4 style="margin-top:0;">Description</h4>
+                <h4 style="margin-top:0;">Technique ID</h4>
+                <span ng-non-bindable id="techniqueID">[technique.techniqueName]</span>
+              </div>
+              <div>
+                <h4>Description</h4>
                 <span ng-non-bindable id="techniqueDescription">[technique.description]</span>
               </div>
               <div class="groupDiv">
