Fixes #15713: Show log informations next to reports and full compliance report

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
@@ -23,6 +23,8 @@
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-bootstrap.css" media="screen" />
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-quicksearch.css" media="screen" />
 
+    <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/datatables/rowGroup-bootstrap-1.1.0.min.css" media="screen" />
+
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/AdminLTE/AdminLTE.min.css"/>
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-menu.css"/>
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-datatable.css" media="screen" />
@@ -34,6 +36,7 @@
 
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/jstree/jquery.jstree.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/datatables/datatables.min.js"></script>
+    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/datatables/dataTables-rowGroup-1.1.0.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/jquery-ui.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/timepicker/jquery-ui-timepicker-addon.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/timepicker/jquery-ui-timepicker-addon-en.js"></script>
