--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/reports_server.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/reports_server.html
@@ -3,10 +3,15 @@
   <runAgent></runAgent>
   <lastreportgrid-intro></lastreportgrid-intro>
 
+
+  <div id="AllLogButton"></div>
+
   <lastreportgrid-grid></lastreportgrid-grid>
-  <div id="reportsGrid_paginate_area" class="paginate"></div>
 
+  <div class="clearfix"></div>
 
+  <div id="logTitle" class="space-top"></div>
+  <table id="complianceLogsGrid" cellspacing="0"></table>
   <lastreportgrid-missing></lastreportgrid-missing>
   <lastreportgrid-unexpected></lastreportgrid-unexpected>
 
