Fixes #15713: Show log information next to reports and full compliance report

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
@@ -24,7 +24,7 @@
         <div class="lift:administration.EventLogsViewer.display"></div>
 
         <span id="eventLogsError"></span>
-        <div id="filterLogs" class="hide">
+        <div id="filterLogs">
           Get event logs between
           <input type="text" class="pickStartInput form-control input-xs"/>
           and
