--- a/builder/index.html
+++ b/builder/index.html
@@ -476,9 +476,9 @@
                             <form name="CForm.form">
                                 <div class="form-group condition-form">
                                   <label class="control-label" for="advanced">Other conditions:</label>
-                                  <textarea msd-elastic name="cfClasses" class="form-control" rows="1" id="advanced" ng-pattern="/^[a-zA-Z0-9!()._]+$/" ng-model="selectedMethod.advanced_class" ng-change="updateClassContext()"></textarea>
+				  <textarea msd-elastic name="cfClasses" class="form-control" rows="1" id="advanced" ng-pattern="/^[a-zA-Z0-9_!.|${}\[\]()@:]+$/" ng-model="selectedMethod.advanced_class" ng-change="updateClassContext()"></textarea>
                                   <div ng-messages="CForm.form.cfClasses.$error" role="alert">
-                                    <div ng-message="pattern" class="text-danger">This field cannot contain whitespace</div>
+                                    <div ng-message="pattern" class="text-danger">This field should only contains alphanumerical characters (a-zA-Z0-9) or the following characters _!.|${}[]()@:</div>
                                   </div>
                                 </div>
                                 <div class="form-group condition-form">
