Fixes #16007: We cannot close the resource uploader

--- a/builder/index.html
+++ b/builder/index.html
@@ -368,7 +368,7 @@
                           </div>
                         </div>
                       </div>
-                      <div ng-if="fileManagerState.open" class="filemanager-container">
+                      <div ng-if="fileManagerState.open" class="filemanager-container" ng-click="closeWindow($event,false)">
                         <angular-filemanager></angular-filemanager>
                       </div>
                     </div>
